--- a/posts/posts/2023-10-13-cmd-119.md
+++ b/posts/posts/2023-10-13-cmd-119.md
@@ -37,7 +37,7 @@ https://wilcohq.bandcamp.com/track/a-bowl-and-a-pudding
 ## courtney barnett - End Of The Day 
 ### Ambient - Album : End Of The Day (music from the film Anonymous Club) (2023)
 
-On ralentit encore un peu avec cet Ambient un peu sauvage de courney barnett, basé essentiellement il me semble sur un guitare et sa reverb.
+On ralentit encore un peu avec cet Ambient un peu sauvage de courney barnett, basé essentiellement il me semble sur une guitare et sa reverb.
 
 On aime la place donnée aux notes qui s'effacent vaporeuse, à plein volume entre les oreilles - le morceau s'écoute fort et les yeux fermés.
 
@@ -47,7 +47,7 @@ https://courtneybarnett.bandcamp.com/track/end-of-the-day
 ## Louis Jucker - Asylee
 ### Indie Rock / Experimental - Album : Suitcase Suite (2023)
 
-Je nous ai déniché ce drôle de morceau cette semaine : 7 minutes d'Indie Rock dilué dans des synthés saturés. On s'attend à ce que le morceau démarre à un moment, une petite batterie, une boite à rythme, quelque chose. Mais non, il s'éteint en une minute d'un archet qui glisse le plus lentement du monde sur une corde quelque part, autour de bruits inquiétants. Un délice.
+Je nous ai déniché ce drôle de morceau cette semaine : 7 minutes d'Indie Rock dilué dans des synthés saturés. On s'attend à ce que le morceau démarre à un moment, une petite batterie, une boite à rythme, quelque chose, mais non. Il s'éteint en une minute d'un archet qui glisse le plus lentement du monde sur une corde quelque part, autour de bruits inquiétants. Un délice.
 
 https://louisjucker.bandcamp.com/track/asylee
 
@@ -56,7 +56,7 @@ https://louisjucker.bandcamp.com/track/asylee
 
 Le coup de coeur de la semaine (et même bien plus que ça) c'est ce "If" de Blonde Redhead et, finalement, leur album Sit Down for Dinner entier.
 
-C'est de la frappe, tout simplement. De la rythmique impeccable aux petits bruits de cowbell discret, tout est à garder et on se met à chantonner "And I am asking to myself" à longueur de journée.
+C'est de la frappe, tout simplement. De la rythmique impeccable aux petits bruits de cowbell discrets, tout est à garder et on se met à chantonner "And I am asking to myself" à longueur de journée.
 
 https://blonderedhead.bandcamp.com/track/if
 
