--- a/posts/posts/2023-11-24-cmd-125.md
+++ b/posts/posts/2023-11-24-cmd-125.md
@@ -18,7 +18,7 @@ https://cuneiformrecords.bandcamp.com/track/ascension
 ## Bogdan Raczynski - Untitled 2 
 ### Breakbeat / Experimental - Album : Boku Mo Wakaran (1999)
 
-On reste sous le cap fatidique des année 2000 pour écouter cette petite pépite expérimental au son Breakbeat. Les quelques brides de textes sonnent là aussi enfantins, en tout cas distordus au vocodeur comme on le faisant alors. On aime beaucoup.
+On reste sous le cap fatidique des années 2000 pour écouter cette petite pépite expérimentalle au son Breakbeat. Les quelques bribes de textes sonnent là aussi enfantins, en tout cas distordus au vocodeur comme on le faisant alors. On aime beaucoup.
 
 https://www.youtube.com/watch?v=QR3PS8F8sis
 
