--- a/posts/posts/2023-12-01-cmd-126.md
+++ b/posts/posts/2023-12-01-cmd-126.md
@@ -65,7 +65,7 @@ https://richardhoughten.bandcamp.com/track/drifting-out-color-blend
 
 Parce que `cmd` n'est devenu au fil des moins qu'un leurre conçu pour vous appâter afin de vous faire écouter de l'Ambient - la faute à la trentaine qui approche probablement, en voilà un nouveau morceau.
 
-C'est là aussi beau comme une pleine lune. Le morceau a du caractère et reste mystérieux tout du long de ces 7 minutes 0 secondes tout pile. Carré. Efficace.
+C'est là aussi beau comme une pleine lune. Le morceau a du caractère et reste mystérieux tout du long de ces 7 minutes 0 seconde tout pile. Carré. Efficace.
 
 https://shihoyabuki.bandcamp.com/track/tomoshibi
 
