--- a/posts/posts/2023-12-02-cmd-127.md
+++ b/posts/posts/2023-12-02-cmd-127.md
@@ -27,7 +27,7 @@ On aime ce côté un peu groovy, un peu suspendu. À mettre à fond entre les de
 https://artfeynman.bandcamp.com/track/he-dances
 
 ## GHOSTWOMAN - Juan 
-## Alternative Rock - Album : Hindsight Is 50/50 (2023)
+### Alternative Rock - Album : Hindsight Is 50/50 (2023)
 
 Belle découverte récente que cet album Hindsight Is 50/50 du duo GHOSTWOMAN (guitare et voix d'un côté, batterie de l'autre - what else?). Du bon rock bien saturé et de longues plages instrumentales.
 
