--- a/posts/content/posts/2024-02-16-cmd-136.md
+++ b/posts/content/posts/2024-02-16-cmd-136.md
@@ -13,7 +13,7 @@ Au programme : Pop, Folk, Rock, Electro et beaucoup d'Ambient.
 ## Helado Negro - Es Una Fantasia
 ### Indie Pop / Folk - Album : Phasor (2024)
 
-On regarde Phasor, album de "Helado Negro" sorti en début de mois et qu'on a retrouvé un peu partout depuis. La critique est divisée: certaines personnes l'aime énormément, d'autre le trouve trop mou.
+On regarde Phasor, album de "Helado Negro" sorti en début de mois et qu'on a retrouvé un peu partout depuis. La critique est divisée: certaines personnes l'aime énormément, d'autres le trouve trop mou.
 
 Les musiques joliment molles, il faut bien avouer que ça nous fait un petit quelque chose ici sur `cmd`. 
 
