--- a/posts/content/posts/2024-03-08-cmd-139.md
+++ b/posts/content/posts/2024-03-08-cmd-139.md
@@ -6,7 +6,7 @@ image:
     caption: "vinted"
 ---
 
-Cette semaine c'est la grande forme si on veut en croire le nombre de morceaux sélectionner pour cet épisode de `cmd`. 10 tout rond, maximum légal. On remerciera le retour du soleil et les effets insoupçonnés des photons sur les tympans auditifs.
+Cette semaine c'est la grande forme si on veut en croire le nombre de morceaux sélectionnés pour cet épisode de `cmd`. 10 tout rond, maximum légal. On remerciera le retour du soleil et les effets insoupçonnés des photons sur les tympans auditifs.
 
 Au programme donc : un début plutôt Indie-chose (comprendre Pop, Rock), puis Ambient et Krautrock, puis Électro plus pêchu (comprendre House et Techno).
 
