--- a/posts/content/posts/2024-03-22-cmd-141.md
+++ b/posts/content/posts/2024-03-22-cmd-141.md
@@ -59,7 +59,7 @@ On le passe en boucle cet album, qui mélange Breakeat et Electro d'une façon t
 
 https://fourtet.bandcamp.com/track/loved-2
 
-### Ariel Kalma - Chase Me Now 
+## Ariel Kalma - Chase Me Now 
 ### Experimental - Compilation : An Evolutionary Music (2014)
 
 Transition breakée vers le coup de coup de coeur expérimental de la semaine. On est tombé par hasard sur cette compilation de morceaux de Ariel Kalma.
@@ -70,7 +70,7 @@ On vous conseille tout l'album.
 
 https://arielkalma.bandcamp.com/track/chase-me-now
 
-### Hainbach & Look Mum No Computer - Pipe Dreams 
+## Hainbach & Look Mum No Computer - Pipe Dreams 
 ### Electro / Pop - Album : Pipe Dreams (2014)
 
 Drôle de mélange là aussi que ce morceau à l'esprit plutôt Pop à mes yeux, mais à la musique beaucoup plus hors cadre. C'est à moitié New Age, à moitié Techno. 
