--- a/posts/content/posts/2024-04-12-cmd-144.md
+++ b/posts/content/posts/2024-04-12-cmd-144.md
@@ -2,8 +2,8 @@
 title: 'cmd #144'
 image:  
     src: '/images/cmd-144.png'
-    alt: "photo abstraite avec des tuyaux recouverts de végétations" 
-    caption: "Enora DA cmd"
+    alt: "Paysage de montagne, grand soleil" 
+    caption: "voir les vâches dans la montagne"
 ---
 
 Après une semaine alpine, voilà le classique `cmd` du vendredi. 
