--- a/posts/content/posts/2024-04-19-cmd-145.md
+++ b/posts/content/posts/2024-04-19-cmd-145.md
@@ -2,8 +2,8 @@
 title: 'cmd #145'
 image:  
     src: '/images/cmd-145.png'
-    alt: "Paysage de montagne, grand soleil" 
-    caption: "voir les vâches dans la montagne"
+    alt: "un tag Dealer de Pinard" 
+    caption: "bon plan"
 ---
 Et voilà, nouvelle fin de semaine, nouveau `cmd`. Au programme, pas de surprise si ce n'est qu'on démarre par de la Techno : beaucoup d'Ambient, un peu d'IDM, un peu de Rock, un peu de Rap.
 
