--- a/posts/content/posts/2024-06-21-cmd-151.md
+++ b/posts/content/posts/2024-06-21-cmd-151.md
@@ -6,7 +6,7 @@ image:
     caption: "Django contemplant l'inatteignable"
 ---
 
-`cmd`, épisode 151. Une semaine aussi douce que pluvieuse, et ce grâce à la présence à mes côté d'un quadrupède nommé Django. Le dogo est stage d'apprentissage pour une semaine, le temps que ses propriétaires rechargent leur batterie de soleil. Je vais bientôt devoir faire pareil.
+`cmd`, épisode 151. Une semaine aussi douce que pluvieuse, et ce grâce à la présence à mes côtés d'un quadrupède nommé Django. Le dogo est stage d'apprentissage pour une semaine, le temps que ses propriétaires rechargent leur batterie de soleil. Je vais bientôt devoir faire pareil.
 
 Au programme, du très doux donc: Experimental et Ambient surtout, un peu de House, un peu de Post Rock,  un peu de Classique et du R&B.
 
@@ -24,7 +24,7 @@ https://aiyamamoto.bandcamp.com/track/start-of-the-day-toaster-water-gas-cutting
 
 Le vrai début musical commencent donc ici, dirons les personnes les moins fun de l'assemblée. On trouve en effet dans "Get Some Rest" une ligne de guitare tout simple, quelques notes de synthé et une flute. De quoi nous donner un bon morceau Ambient pour faire la sieste.
 
-https://ezrafeinberg.bandcamp.com/track/get-some-rest-feat-mary-lattimore`
+https://ezrafeinberg.bandcamp.com/track/get-some-rest-feat-mary-lattimore
 
 ## BEAK> - Bloody Miles 
 ### Post Rock - Album : >>>> (2024)
