--- a/posts/content/posts/2024-07-05-cmd-153.md
+++ b/posts/content/posts/2024-07-05-cmd-153.md
@@ -2,9 +2,13 @@
 title: 'cmd #153'
 image:  
     src: '/images/cmd-153.png'
-    alt: "graph en forme de silhouette" 
-    caption: "abstract"
+    alt: "zoom sur un mètre déplié sur un plan de travail de cuisine" 
+    caption: "croix"
 ---
+
+Semaine paradoxale. Sur le papier elle avait tout pour elle: un peu de soleil, des amis, des apéros, du taf cool. Le hic voyez-vous c'est la promesse du fascisme au pouvoir et les discours orwelliens de partout.
+
+Au programme donc, de l'Ambient triste, option mélancolie, option fin de quelque chose de bien. Ambient / Classical / Jazz / Expérimental / House.
 
 
 ## Whatever The Weather - 25°C
@@ -38,6 +42,18 @@ https://kaliavandever.bandcamp.com/track/recollections-from-shore
 En parlant de machin plantant, en voilà un bon nouvel exemple - cela dit c'est facile à trouver sur `cmd`. Moon Diagrams nous sort un drôle de morceau, un peu Pop, un peu guitare Rock, un peu chelou, c'est "Fragment Rock" qui porte bien son nom.
 
 https://moondiagrams.bandcamp.com/track/fragment-rock
+
+## nonkeen - mark 
+
+### Ambient / Jazz - Album : All good? (2024)
+
+Ambient et Jazz, encore. Cette semaine peut-être plus encore que d'habitude les oreilles auront été sensibles à toute trace de mélancolie. Ambiance fin du monde. C'est dans l'air du temps.
+
+En écoutant "mark" on ne peut que rester subjugué du travail si délicat à la batterie. On hoche la tête en rythme, subtilement. Et on laisse le morceau grandir au long de 11 belles minutes.
+
+Derrière, un trio de choc : Frederic Gmeiner, Nils Frahm, and Sepp Singwald. On est pas surpris. 
+
+https://nonkeen.bandcamp.com/track/mark
 
 ## Isolée - Pardon My French 
 
