--- a/posts/content/posts/2024-07-05-cmd-153.md
+++ b/posts/content/posts/2024-07-05-cmd-153.md
@@ -6,16 +6,16 @@ image:
     caption: "croix"
 ---
 
-Semaine paradoxale. Sur le papier elle avait tout pour elle: un peu de soleil, des amis, des apéros, du taf cool. Le hic voyez-vous c'est la promesse du fascisme au pouvoir et les discours orwelliens de partout.
+Semaine paradoxale. Sur le papier elle avait tout pour elle : un peu de soleil, des amis, des apéros, du taf cool. Le hic voyez-vous c'est la promesse du fascisme au pouvoir et les discours orwelliens de partout.
 
-Au programme donc, de l'Ambient triste, option mélancolie, option fin de quelque chose de bien. Ambient / Classical / Jazz / Expérimental / House.
+Au programme donc de l'Ambient triste, option mélancolie, option fin de quelque chose de bien. Ambient / Classical / Jazz / Expérimental / House.
 
 
 ## Whatever The Weather - 25°C
 
 ### Ambient - Album : Whatever The Weather  (2022)
 
-On commence très doux, mais alors très très doux. On en a bien besoin, il faut bien l'avouer. Et puis ça nous rappelle surement à certains des meilleurs moments dont on a profité jusqu'alors et dont on espère profiter certainement dans le futur. 
+On commence très doux, mais alors très très doux. On en a bien besoin il faut bien l'avouer. Et puis ça nous rappelle surement à certains des meilleurs moments dont on a profité jusqu'alors et dont on espère profiter certainement dans le futur. 
 
 https://whateva.bandcamp.com/track/25-c
 
@@ -23,7 +23,7 @@ https://whateva.bandcamp.com/track/25-c
 
 ### Ambient / Classical - Album : Leken (2017)
 
-D'une douceur à l'autre. Ici quelques notes mélancoliques au piano comme on voit une côte d'éloigner quand on prend le bateau, ou qu'on accueille chez soi un peu pétrifié un micro centre d'appel antifasciste pour une soirée, parce qu'on en est rendu là.
+D'une douceur à l'autre. Ici quelques notes mélancoliques au piano comme on voit une côte s'éloigner depuis un bateau, ou qu'on accueille chez soi un peu pétrifié un micro centre d'appel antifasciste pour une soirée, parce qu'on en est rendu là.
 
 https://www.youtube.com/watch?v=UlZC-64GviA
 
@@ -31,7 +31,7 @@ https://www.youtube.com/watch?v=UlZC-64GviA
 
 ### Ambient / Jazz - Album : We Fell In Turn (2023)
 
-On sort les cuivres à présente mais on a du mal à décoller, il faut bien l'avouer. Ambient encore. À cette semaine aux forts enjeux répond le besoin de retrouver une zone de confort, au moins entre les deux tympans, et si possible de faon assez planante.
+On sort les cuivres à présente mais on a du mal à décoller. Ambient encore. À cette semaine aux forts enjeux répond le besoin de retrouver une zone de confort, au moins entre les deux tympans, et si possible de façon assez planante.
 
 https://kaliavandever.bandcamp.com/track/recollections-from-shore
 
@@ -39,7 +39,7 @@ https://kaliavandever.bandcamp.com/track/recollections-from-shore
 
 ### Pop / Experimental - Album : Cemetery Classics (2024)
 
-En parlant de machin plantant, en voilà un bon nouvel exemple - cela dit c'est facile à trouver sur `cmd`. Moon Diagrams nous sort un drôle de morceau, un peu Pop, un peu guitare Rock, un peu chelou, c'est "Fragment Rock" qui porte bien son nom.
+En parlant de machins plantants, en voilà un bon nouvel exemple - cela dit c'est facile à trouver sur `cmd`. Moon Diagrams nous sort un drôle de morceau, un peu Pop, un peu guitare Rock, un peu chelou, c'est "Fragment Rock" qui porte bien son nom.
 
 https://moondiagrams.bandcamp.com/track/fragment-rock
 
@@ -47,11 +47,11 @@ https://moondiagrams.bandcamp.com/track/fragment-rock
 
 ### Ambient / Jazz - Album : All good? (2024)
 
-Ambient et Jazz, encore. Cette semaine peut-être plus encore que d'habitude les oreilles auront été sensibles à toute trace de mélancolie. Ambiance fin du monde. C'est dans l'air du temps.
+Ambient et Jazz, encore. Cette semaine peut-être plus encore que d'habitude les oreilles auront été sensibles à toute trace de grisaille. C'est dans l'air du temps.
 
 En écoutant "mark" on ne peut que rester subjugué du travail si délicat à la batterie. On hoche la tête en rythme, subtilement. Et on laisse le morceau grandir au long de 11 belles minutes.
 
-Derrière, un trio de choc : Frederic Gmeiner, Nils Frahm, and Sepp Singwald. On est pas surpris. 
+Derrière, un trio de choc : Frederic Gmeiner, Nils Frahm, and Sepp Singwald. On n'est pas surpris du résultat. 
 
 https://nonkeen.bandcamp.com/track/mark
 
@@ -59,7 +59,7 @@ https://nonkeen.bandcamp.com/track/mark
 
 ### House - Album : Resort Island (2023)
 
-Attention le morceau le plus pêchu de cet épisode sera surement cette house minimal d'Isolée, DJ allemand qui parle visiblement un peu français. On vous conseille l'album entier - fort élégant, et même la discographie entière. Le monsieur était même programmé par FIP en festoche, c'est dire le gage de qualité.
+Attention le morceau le plus pêchu de cet épisode sera surement cette house minimal d'Isolée, DJ allemand qui parle visiblement un peu français. On vous conseille l'album entier - fort élégant, et même la discographie entière en fait. Le monsieur était programmé par FIP en festoche, c'est dire le gage de qualité.
 
 https://www.youtube.com/watch?v=EMF0DJsEexg
 
