--- a/posts/content/posts/2024-07-05-cmd-153.md
+++ b/posts/content/posts/2024-07-05-cmd-153.md
@@ -63,7 +63,7 @@ Attention le morceau le plus pêchu de cet épisode sera surement cette house mi
 
 https://www.youtube.com/watch?v=EMF0DJsEexg
 
-### ThorF - Frontier Pt2 
+## ThorF - Frontier Pt2 
 
 ### Ambient - Album : Here We Are (2024)
 
