--- a/posts/content/posts/2024-10-11-cmd-162.md
+++ b/posts/content/posts/2024-10-11-cmd-162.md
@@ -1,9 +1,9 @@
 ---
-title: 'cmd #161'
+title: 'cmd #162'
 image:  
-    src: '/images/cmd-161.png'
-    alt: "on morceau de papier marqué BB par terre" 
-    caption: "BB"
+    src: '/images/cmd-162.png'
+    alt: "un chien derrière des branchages" 
+    caption: "perdue"
 ---
 Hoplà ! Et voilà une semaine bien chargée qui se termine. La routine finalement.
 
