--- a/posts/content/posts/2024-10-25-cmd-163.md
+++ b/posts/content/posts/2024-10-25-cmd-163.md
@@ -5,7 +5,7 @@ image:
     alt: "Un panneau Marran capitale de la poule au oeufs extra roux" 
     caption: "extra roux"
 ---
-Et voilà deux belle semaines de passées. Pleins de choses, dont une première session de surf qui terminée sans noyade, la grande victoire. L'objectif à présent est très simple: week-end, promenade de Suzette et grosses siestes pour se remettre de tout ça.
+Et voilà deux belles semaines de passées. Pleins de choses, dont une première session de surf qui terminée sans noyade, la grande victoire. L'objectif à présent est très simple: week-end, promenade de Suzette et grosses siestes pour se remettre de tout ça.
 
 Au programme pour aujourd'hui: des sons Ambient, Experimental, Rock, Jazz, Trip Hop et House. Ça coule tout seul.
 
