--- a/posts/content/posts/2024-11-15-cmd-165.md
+++ b/posts/content/posts/2024-11-15-cmd-165.md
@@ -56,7 +56,7 @@ https://publicpossession.bandcamp.com/track/ddwy-pendorlan\
 
 ## Techno / Minimal - Compilation : MM031 - Layout 10 (2024)
 
-Depuis Septembre, on Laurent Garnier le premier samedi du mois sur FIP comme on attendrait le messie venu nous annoncer la potion magique pour annuler le réchauffement climatique et les fachos.
+Depuis Septembre, on trépigne pour écouter Laurent Garnier le premier samedi du mois sur FIP comme on attendrait le messie venu nous annoncer la potion magique pour annuler le réchauffement climatique et les fachos.
 
 2h30 de Deep Search forcément ça déménage en pépites qui secouent. La preuve ici avec cette merveille de Techno minimale.
 
