--- a/posts/content/posts/2024-12-20-cmd-169.md
+++ b/posts/content/posts/2024-12-20-cmd-169.md
@@ -9,7 +9,7 @@ image:
 
 Dernier `cmd` de cette année zinzin avant des vacances bien méritées. La même chose pour 2025 svp, mais en moins dense, merci.
 
-Au programme, des jolis sons volés à droite et à gauche. Un peu côté [Call Me Radio](https://soundcloud.com/call-me-radio/call-me-radio-umarell-1-240924?p=i&c=0) le nouveau fleuron nantais, et beaucoup côté comparses d'ISS, tellement ils nous font toujours des sélection incroyables.
+Au programme, des jolis sons volés à droite et à gauche. Un peu côté [Call Me Radio](https://soundcloud.com/call-me-radio/call-me-radio-umarell-1-240924?p=i&c=0) le nouveau fleuron nantais, et beaucoup côté comparses d'[ISS](https://www.prun.net/emission/8MNV-iss), tellement ils nous font toujours des sélections incroyables.
 
 ## Midnight Sister - Tomorrowland 
 
